[tool.poetry]
name = "crewai-28"
version = "0.28.8"
description = "Cutting-edge framework for orchestrating role-playing, autonomous AI agents. By fostering collaborative intelligence, CrewAI empowers agents to work together seamlessly, tackling complex tasks."
authors = ["Joao Moura <joao@crewai.com>"]
readme = "README.md"
packages = [
   { include = "crewai", from = "src" },
]

[tool.poetry.urls]
Homepage = "https://crewai.com"
Documentation = "https://github.com/joaomdmoura/CrewAI/wiki/Index"
Repository = "https://github.com/joaomdmoura/crewai"

[tool.poetry.dependencies]
streamlit = "*"
pysqlite3-binary = "*"
python = ">=3.10,<=3.13"
pydantic = "*"
langchain = "*"
openai = "*"
opentelemetry-api = "*" 
opentelemetry-sdk = "*"
opentelemetry-exporter-otlp-proto-http = "*"
instructor = "*"
regex = "*"
crewai-tools = { version = "*", optional = true }
click = "*"
python-dotenv = "*"
embedchain = "*"
appdirs = "*"
python-decouple = "*"
crewai = "*"
setuptools = "*"
anthropic = "*"
langchain-anthropic = "*"

[tool.poetry.extras]
tools = ["crewai-tools"]

[tool.poetry.group.dev.dependencies]
isort = "*"
pyright = "*"
autoflake = "*"
pre-commit = "*"
mkdocs = "*"
mkdocstrings = "*"
mkdocstrings-python = "*"
mkdocs-material = {extras = ["imaging"], version = "*"}
mkdocs-material-extensions = "*"
pillow = "*"
cairosvg = "*"
crewai-tools = "*"

[tool.isort]
profile = "black"
known_first_party = ["crewai"]

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-vcr = "*"
python-dotenv = "*"

[tool.poetry.scripts]
crewai = "crewai.cli.cli:crewai"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
